k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trmnl-anime-of-the-day
spec:
  selector:
    app: trmnl-anime-of-the-day
  ports:
    - port: 80
      targetPort: 3000
